# AstroBox-Public

./: .gitignore  LICENSE  README.md  next.config.ts  package.json  pm  pm.bat  pm.sh  postcss.config.mjs
public/: boom.webm
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/plugins/: README.md
src-tauri/plugins/btclassic-spp/: Cargo.toml  README.md
src-tauri/plugins/btclassic-spp/android/: build.gradle.kts
src-tauri/plugins/btclassic-spp/android/src/androidTest/java/: BTSppInstrumentedTest.kt
src-tauri/plugins/btclassic-spp/android/src/main/: AndroidManifest.xml
src-tauri/plugins/btclassic-spp/android/src/main/java/: BTSpp.kt  BtClassicSPPPlugin.kt  RustTypes.kt
src-tauri/plugins/btclassic-spp/android/src/test/java/: BTSppUnitTest.kt
src-tauri/plugins/btclassic-spp/ios/: Package.swift  README.md
src-tauri/plugins/btclassic-spp/ios/Sources/: ExamplePlugin.swift
src-tauri/plugins/btclassic-spp/permissions/autogenerated/: reference.md
src-tauri/plugins/btclassic-spp/src/: desktop.rs  lib.rs  mobile.rs  models.rs
src-tauri/plugins/btclassic-spp/src/linux/: implementation.rs
src-tauri/plugins/btclassic-spp/src/macos/: implementation.rs
src-tauri/plugins/btclassic-spp/src/win/: implementation.rs
src-tauri/src/: account.rs  auth.rs  bt.rs  community.rs  config.rs  frontapi.rs  frontmodels.rs  fs.rs  interface.rs  lib.rs  logger.rs  miwear.rs  net.rs  pluginstore.rs  pluginsystem.rs  tools.rs  tracker.rs
src-tauri/src/account/: provider.rs
src-tauri/src/bt/: device.rs
src-tauri/src/community/: provider.rs
src-tauri/src/community/provider/: jsplugin.rs  official.rs
src-tauri/src/community/provider/official/: models.rs
src-tauri/src/crypto/: aesccm.rs  aesctr.rs  mod.rs
src-tauri/src/interface/: cli.rs  deeplink.rs  macmenu.rs
src-tauri/src/miwear/: bleuuids.rs  btrecv.rs  device.rs  network_stack.rs  packet.rs
src-tauri/src/miwear/command_pool/: mod.rs
src-tauri/src/miwear/device/: auth.rs  error.rs  firmware.rs  hello.rs  mass.rs  models.rs  resutils.rs  system.rs  thirdpartyapp.rs  watchface.rs
src-tauri/src/miwear/device/mass/: packet.rs
src-tauri/src/miwear/network_stack/: dhcp.rs  meter.rs
src-tauri/src/pluginstore/provider/: mod.rs  official.rs
src-tauri/src/pluginsystem/: apis.rs  console.rs  globals.rs  manager.rs  manifest.rs  plugin.rs  timers.rs  utils.rs
src-tauri/src/pluginsystem/apis/: config.rs  debug.rs  device.rs  event.rs  filesystem.rs  installer.rs  interconnect.rs  lifecycle.rs  models.rs  native.rs  network.rs  provider.rs  thirdpartyapp.rs  ui.rs
src-tauri/src/tracker/: sentry.rs
src/account/: manager.ts  provider.ts
src/animation/: AnimatedLayout.tsx  NavDirectionContext.tsx  navigationEvent.ts
src/community/: manager.ts  provider.ts
src/components/AccountCard/: AccountCard.tsx
src/components/BoardcastDialog/: BoardcastDialog.tsx
src/components/CardButton/: CardButton.module.css  CardButton.tsx
src/components/Debug/: CommandPoolExplorer.tsx  ConsoleOutput.module.css  ConsoleOutput.tsx  DebugWindow.module.css  DebugWindow.tsx  PluginStoreTest.tsx
src/components/DeviceConnectCard/: DeviceConnectCard.module.css  DeviceConnectCard.tsx
src/components/EventHandlers/: addDeviceFromQr.tsx  drag.tsx
src/components/HomeNav/: HomeNav.module.css  HomeNav.tsx  NavItem.tsx
src/components/LinkedSubtitle/: LinkedSubtitle.module.css  LinkedSubtitle.tsx
src/components/LoginDialog/: LoginDialog.tsx
src/components/ModifyWatchfaceIDDialog/: ModifyWatchfaceIDDialog.tsx
src/components/OnlineImage/: OnlineImage.tsx
src/components/OpenToPageDialog/: OpenToPageDialog.tsx
src/components/PluginNodeUI/: PluginNodeUI.module.css  PluginNodeUI.tsx
src/components/ProviderDialog/: ProviderDialog.tsx
src/components/Queue/: QueueCard.tsx  QueueTrigger.tsx  QueueWindow.tsx  queue.module.css  queuecard.module.css
src/components/UpdateDialog/: UpdateDialog.tsx
src/components/appleButtonWapper/: appleButtonWapper.module.css  appleButtonWapper.tsx
src/components/disclaimer/: disclamierDialog.tsx
src/components/home/: CommunityWatchfaceCard.module.css  CommunityWatchfaceCard.tsx  communityhome.module.css  homeApplist.module.css  homeApplist.tsx  homeBanner.tsx
src/components/plugin/: pluginFeatures.tsx  pluginInstalled.tsx  pluginStore.tsx
src/components/plugincard/: PluginCard.tsx  pluginCard.module.css
src/components/settings/: appleLikeSlider.tsx  dropdown.module.css  dropdownCard.tsx  settingsCard.tsx  sliderCard.tsx  switchCard.tsx  winDropdown.tsx
src/device/: connect.ts  device.ts  devices.ts  install.ts  permission.ts
src/device/devices/: band.ts  bandpro.ts  devices.ts  rw.ts  s.ts
src/filesystem/: pathhelper.ts  picker.ts
src/hooks/: useAnimatedRouter.ts  useAppList.ts  useDeviceMap.ts  useInvoke.ts  useIsMobile.ts  usePluginList.ts  useSystemTheme.ts
src/i18n/: en.json  index.tsx  jp.json  zh-HK.json  zh-sg.json  zh-tw.json  zh.json  zh_Can.json  zh_HK.json  zh_HX.json  zh_MS.json  zh_Meme.json
src/layout/: basePage.module.css  basePage.tsx  settingsGroup.module.css  settingsGroup.tsx  toast.tsx
src/listeners/: resources.ts
src/log/: logger.ts
src/pages/: _app.tsx  index.tsx  root.css
src/pages/device/: app.tsx  device.module.css  index.tsx  info.tsx  switch.tsx  (+2 more)
src/plugin/: types.ts
src/pluginstore/: manager.ts  provider.ts
src/router/: nav.ts
src/taskqueue/: downloadTask.ts  installTask.ts  queue.ts  tasklist.ts
src/tools/: common.ts  time.ts
src/types/: BannerItem.ts  DeviceMap.ts  ResManifestV1.ts  bluetooth.ts  color-thief-browser.d.ts
(+16 files in other folders)
