[package]
name = "Astro-Box"
version = "1.0.0"
description = "A multifunctional toolbox designed for Xiaomi Vela wearable devices"
authors = ["AstralSightStudios"]
edition = "2021"
rust-version = "1.77.2"

[workspace]
members = [".", "./plugins/btclassic-spp"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# ────── Build ──────
[build-dependencies]
tauri-build        = { version = "2.3.0", features = [] }
protoc-bin-vendored = "3.1.0"
prost-build        = "0.13.5"
pbjson-build       = "0.7.0"
chrono             = "0.4.41"

# ────── Runtime ──────
[dependencies]
# --- crypto / hash ---
sha2        = "0.10.9"
sha1        = "0.10"
hmac        = "0.12.1"
rc4         = "0.1"
cipher      = "0.4"
aes         = "0.8.4"
ctr         = "0.9.2"
ccm         = "0.5.0"
crc         = "3.3.0"
md-5        = "0.10.6"

# --- randomness ---
rand        = "0.8.5"

# --- async / runtime ---
tokio              = { version = "1.46.1", features = ["full"] }
tokio-stream       = "0.1.17"
tokio-util         = "0.7"
futures-util       = "0.3.31"
async-trait        = "0.1.88"

# --- networking / http ---
reqwest            = { version = "0.12.22", features = ["json", "stream", "blocking", "rustls-tls", "cookies"], default-features = false }
reqwest_cookie_store = "0.8.0"
sysproxy             = "0.3.0"
url                = "2.5.4"

# --- serialization ---
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
serde_json5        = "0.2.1"
pbjson             = "0.7.0"
pbjson-types       = "0.7.0"
prost              =  { git = "https://github.com/66hh/prost-astrobox", branch = "master" }
csv                = "1.3.1"

# --- misc util ---
anyhow             = "1"
log                = "0.4"
colored            = "3.0.0"
flexi_logger       = "0.30.1"
fern               = { version = "0.7.1", features = ["colored"] }
once_cell          = "1.21.3"
byteorder          = "1.5.0"
uuid               = "1.17.0"
dashmap            = "5"
parking_lot        = "0.12.4"
bytes              = "1.10.1"
base64             = "0.22.1"
chrono             = "0.4.41"
mime_guess         = "2.0.5"
chardetng          = "0.1.17"
encoding_rs        = "0.8.33"
hex                = "0.4.3"

# --- networking (special) ---
pcap-file          = "2.0.0"
packet_crafter     = "0.2.0"
etherparse         = { version = "0.18", default-features = false, features = ["std"] }
dhcproto           = "0.13.0"
udp-stream         = { version = "0.0", default-features = false }
ipstack            = "0.4.0"
crossbeam          = "0.8.4"
zip                = "4.2.0"

# --- JS engine & scripting ---
boa_engine         = "0.20.0"
boa_runtime        = "0.20.0"
boa_gc             = "0.20.0"

# --- OAuth / sentry ---
oauth2             = "5.0.0"
tauri-plugin-sentry = { git = "https://github.com/Searchstars/sentry-tauri", branch = "master", default-features = false, features = [
    "backtrace", "contexts", "panic", "debug-images", "anyhow",
    "log", "slog", "tower", "tracing", "reqwest", "rustls",
] }

# --- Tauri & plugins ---
tauri                = { version = "2.6.2", features = ["rustls-tls"] }
tauri-plugin-log     = "2.6.0"
tauri-plugin-blec    = "0.4"
tauri-plugin-fs      = "2"
tauri-plugin-dialog  = "2"
tauri-plugin-geolocation = "2.3.0"
tauri-plugin-os      = "2.3.0"
tauri-plugin-opener  = "2"
tauri-plugin-deep-link = "2"

# --- project modules ---
btclassic-spp = { path = "./plugins/btclassic-spp" }

# ────── Panic unwind ──────
[profile.dev]
panic = "unwind"
[profile.release]
lto = true
strip = true
opt-level = "z"
panic = "unwind"
[profile.bench]
panic = "unwind"
[profile.test]
panic = "unwind"

# ────── Platform-specific ──────
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state    = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

[target.'cfg(not(target_os = "ios"))'.dependencies]
sentry-rust-minidump = { git = "https://github.com/Searchstars/sentry-rust-minidump-rustls", branch = "master" }
