[package]
name = "btclassic-spp"
version = "0.1.0"
authors = ["AstralSightStudios"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "btclassic-spp"

[dependencies]
tauri = { version = "2.6.2" }
serde = "1.0"
thiserror = "2"
base64 = "0.22.1"
anyhow = "1"
serde_json = "1.0.140"
once_cell = "1.21.3"
dispatch = "0.2"
log = "0.4"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "net",
] }
windows = { version = "0.57", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_Devices_Bluetooth",
  "Win32_Networking_WinSock",
  "Win32_System_Threading",
  "Win32_Security",             # For SECURITY_ATTRIBUTES used by CreateEventW
  "Win32_System_IO",            # For CreateFile, ReadFile, WriteFile if used (not directly in this SPP, but good for general BT)
  "Win32_System_SystemServices" # For some system-level constants if not in other modules
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-io-bluetooth = "0.3.1"
objc2 = "0.6.1"
objc2-io-kit = "0.3"
objc2-foundation = "0.3.1"
objc2-core-foundation = "0.3.1"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17.4", features = ["bluetoothd", "serde", "rfcomm"] }
futures-core = "0.3.31"
futures-util = "0.3.31"

[build-dependencies]
tauri-plugin = { version = "2.3.0", features = ["build"] }
